# Mediathek-RecommendationServer

./: .gitignore  Cargo.toml  README.md  deploy.sh
recommendation_builder/: caching_server.py  categories.py  generate_aliases.py  main.py  scoring.py
recommendation_builder/programs/: 3sat.json  ard.json  arte.json  srf.json  zdf.json
samples/: sample-cron  sample-mediathek_rs.service  sample-nginx.conf
src/: main.rs
src/algorithms/: co_occurrence.rs  mod.rs  rotating_counters.rs
src/api/: mod.rs
